[package]
name = "proc-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.*"
futures-util = "0.3.*"
serde = { version = "1.0.*", features = ["derive"] }
tokio = { version = "1.27.*", features = ["full"] }
warp = "0.3.*"

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
procfs = "0.15.*"
users = "0.11.*"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.*", features = ["psapi"] }
