[package]
name = "proc-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.*"
async-stream = "0.3.*"
futures-util = "0.3.*"
serde = { version = "1.0.*", features = ["derive"] }
sysinfo = "0.28.*"
tokio = { version = "1.27.*", features = ["full"] }
warp = "0.3.*"

[dev-dependencies]
serde_json = "1.0.*"
