[package]
name = "proc-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.*"
async-stream = "0.3.*"
clap = { version = "4.2.*", features = ["derive"] }
futures-util = "0.3.*"
log = "0.4.*"
pretty_env_logger = "0.4.*"
serde = { version = "1.0.*", features = ["derive"] }
sysinfo = "0.28.*"
tokio = { version = "1.27.*", features = ["full"] }
warp = "0.3.*"

[dev-dependencies]
serde_json = "1.0.*"
